--- a/_includes/css/shared.scss
+++ b/_includes/css/shared.scss
@@ -44,6 +44,10 @@ main {
 	
 	> footer {
 		margin-left: calc(200px + 4em);
+		@media (max-width: 900px) {
+			margin-left: 100px;
+			padding-right: 1em;
+		}
 		max-width: 700px;
 		margin-top: 2em;
 		padding-top: 1em;
@@ -515,13 +519,19 @@ $local-link-padding: 0.5em 1.5em 0.6em 0.6em;
 	@include arrow;
 }
 
-nav a:not(.local-link) + a:not(.local-link)::before {
-	position: absolute;
-	content: "∙";
-	pointer-events: none;
-	color: var(--color-3);
-	left: -0.5em;
-	top: -0.05em;
+nav {
+	a:not(.local-link) + a:not(.local-link)::before {
+		position: absolute;
+		content: "∙";
+		pointer-events: none;
+		color: var(--color-3);
+		left: -0.5em;
+		top: -0.05em;
+	}
+	
+	@media (max-width: 700px) {
+		line-height: 2em;
+	}
 }
 
 .posts-nav {
